[package]
name = "storybook"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
server = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
ui = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:server",
    "dep:tokio",
    "dep:tower-http",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
