[package]
name = "server"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
app = { workspace = true, features = ["ssr"] }
axum = { workspace = true }
leptos = { workspace = true, features = ["serde", "ssr"] }
leptos_axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
